next bus API research :hatching_chick:

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 			<button id="get-weather">Get Weather</button>
 			<ul id="weather-details"></ul>
 		</section>
+		<section class="ttc">
+			<h2>TTC</h2>
+			<button id="get-ttc">Next Bus</button>
+			<ul></ul>
+		</section>
 		
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="apiKeys.js"></script>
