attempting to parse XML :cow:

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 		<section class="ttc">
 			<h2>TTC</h2>
 			<button id="get-ttc">Next Bus</button>
-			<ul></ul>
+			<article></article>
 		</section>
 		
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="apiKeys.js"></script>
+		<script src="ttc.js"></script>
 		<script src="app.js"></script>
 	</body>
 </html>
