made XML my bish :new_moon_with_face::horse:

--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
 		</section>
 		<section class="ttc">
 			<h2>TTC</h2>
-			<button id="get-ttc">Next Bus</button>
+			<div class="buttons">
+				<button id="1470-48">Cedarland</button>
+				<button id="14752-48">Royal York Station</button>
+				<button id="14697-37">Islington Station</button>
+				<button id="3828-37">Islington &amp; Rathburn</button>
+			</div>
 			<article></article>
 		</section>
 		
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="apiKeys.js"></script>
+		<script src="weather.js"></script>
 		<script src="ttc.js"></script>
 		<script src="app.js"></script>
 	</body>
