basic stylin :pizza::cat:

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Dashboard</title>
 		<script src="assets/scripts/lib/require.js"></script>
 		<link rel="stylesheet" href="assets/css/main.css">
 	</head>
 	<body>
-		<h1>Dashboard</h1>
 		<div class="wrapper clearfix">
+			<h1>Dashboard</h1>
 			<section class="module weather">
 				<div class="module-container">
 					<h2>Weather</h2>
