--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Dashboard</title>
-		<script src="assets/scripts/lib/chart.js"></script>
+		<script src="assets/scripts/lib/chartist.min.js"></script>
 		<script src="assets/scripts/lib/require.js"></script>
 		<link rel="stylesheet" href="assets/css/main.css">
+		<link rel="stylesheet" href="assets/css/chartist.min.css">
 	</head>
 	<body>
 		<div class="wrapper clearfix">
@@ -31,7 +32,9 @@
 						<button id="get-weather">Get 7 day forecast</button>
 					</div>
 					
-					<div class="graph-container weather-report">
+					<div id="weather-graph" class="weather-report">
+						<div class="ct-chart">
+						</div>
 					</div>
 					<ul id="weather-details" class="weather-report"></ul>
 				</div>
