fixed ttc spinna :high_brightness:

--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,13 @@
 				<div class="module-container">
 					<h2>TTC</h2>
 					<div class="buttons">
-						<button id="1470-48">Cedarland</button>
-						<button id="14752-48">Royal York Station</button>
-						<button id="14697-37">Islington Station</button>
-						<button id="3828-37">Islington &amp; Rathburn</button>
+						<button id="work">Going to Work</button>
+						<button id="home">Going Home</button>
 					</div>
-					<article></article>
+					<div class="predictions clearfix">
+						<article id="prediction-1" class="prediction-container"></article>
+						<article id="prediction-2" class="prediction-container"></article>
+					</div>
 				</div>
 			</section>
 			<section class="module weather">
@@ -31,7 +32,6 @@
 						<button id="get-hourly">Get Hourly</button>
 						<button id="get-weather">Get 7 day forecast</button>
 					</div>
-					
 					<div id="weather-graph" class="weather-report">
 						<div class="ct-chart">
 						</div>
