updated git remote url

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 				<div class="module-container">
 					<h2>TTC</h2>
 					<div class="buttons">
-						<button id="work">Going to Work</button>
+						<button id="work">Going Downtown</button>
 						<button id="home">Going Home</button>
 					</div>
 					<div class="predictions clearfix">
